-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.8.0
-
3
-
9223372036854775807
Right now, OI scrub is started after recovery, which might cause problem for MDS-MDS recovery. Because it relies on the update log, which regular FID file, mapped through OI. i.e. after MDT backup and restore, recovery thread will not be able to retrieve the update log file correctly, because OI scrub is not running until recovery finished.
So we probably should let OI scrub fix some key file first like update log, then start recovery.
- is related to
-
LU-3534 async update cross-MDTs
-
- Resolved
-